Fix spacing Issues

--- a/client/lab_2/style.css
+++ b/client/lab_2/style.css
@@ -138,6 +138,7 @@ form {
   background-color: rgba(255, 224, 138, 0.7);
   flex: 1 2 auto;
   margin: 1rem;
+  max-width: 450px;
   align-items: center;
 }
 
